--- a/public/index.html
+++ b/public/index.html
@@ -8,29 +8,44 @@
     <title>MonOnion</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Css -->
     <link rel="stylesheet" href="./styles/style.css"></a>
 </head>
 
 <body>
-    <div id="container">
+    <!-- <div id="container">
         <h1>Onion Scraper</h1>
-        <!-- Headline - the title of the article -->
-        <div id="headline"></div>
+        < Headline - the title of the article -->
+    <!-- <div id="headline"></div> -->
 
-        <!-- Summary - a short summary of the article -->
-        <div id="summary"></div>
+    <!-- Summary - a short summary of the article -->
+    <!-- <div id="summary"></div> -->
 
-        <!-- URL - the url to the original article -->
-        <div id="url">
+    <!-- URL - the url to the original article -->
+    <!-- <div id="url"> -->
+
+    <!-- </div>
+    </div> -->
+    <div id="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <h1>Note Scraper</h1>
+                <h2>Scraped Websites will display below</h2>
+                <div id="articles"></div>
+            </div>
+
+            <div class="col-lg-6">
+                <div id="notes"></div>
+            </div>
 
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script src="app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
