added scraping and correct deployment to heroku

--- a/public/index.html
+++ b/public/index.html
@@ -16,23 +16,11 @@
 </head>
 
 <body>
-    <!-- <div id="container">
-        <h1>Onion Scraper</h1>
-        < Headline - the title of the article -->
-    <!-- <div id="headline"></div> -->
-
-    <!-- Summary - a short summary of the article -->
-    <!-- <div id="summary"></div> -->
-
-    <!-- URL - the url to the original article -->
-    <!-- <div id="url"> -->
-
-    <!-- </div>
-    </div> -->
     <div id="container">
         <div class="row">
             <div class="col-lg-6">
                 <h1>Note Scraper</h1>
+                <button onclick="window.location.href = '/scrape';">Click here to get new articles!</button>
                 <h2>Scraped Websites will display below</h2>
                 <div id="articles"></div>
             </div>
